# amsicora-service

./: .env  Cargo.toml  secret.key
migrations/2022-09-10-001546_create_users/: up.sql
src/: handlers.rs  main.rs  models.rs  schema.rs
src/utils/: user_token.rs
