[package]
name = "amsicora-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8.8"
bcrypt = "0.13.0"

[dependencies.uuid]
version = "1.1.2"
features = ["v4"]
